syntax = "proto3";

package proto;

service UserService {
    rpc Create(CreateUserRequest) returns (CreateUserResponse) {}
    rpc Fetch(FetchUserRequest) returns (FetchUserResponse) {} 
    rpc List(ListUsersRequest) returns (ListUsersResponse) {} 
    rpc Update(UpdateUserRequest) returns (UpdateUserResponse) {}    
    rpc Delete(DeleteUserRequest) returns (DeleteUserResponse) {} 
}

message User {
    string username = 1;
    string password = 2;
    bool admin = 3;
    string email = 4;
    repeated string aliases = 5;
}

message CreateUserRequest {
    User user = 1;
}

message CreateUserResponse {}

message FetchUserRequest {
    string username = 1;
}

message FetchUserResponse {
    User user = 1;
}

message ListUsersRequest {}

message ListUsersResponse {
    repeated User users = 1;
}

message UpdateUserRequest {
    string username = 1;
    User user = 2;
}

message UpdateUserResponse {}

message DeleteUserRequest {
    string username = 1;
}

message DeleteUserResponse {}
